# Chapter2

./: Dockerfile  Dockerfile.Ubuntu18.04  Dockerfile.Ubuntu20.04  Dockerfile.debian  License.txt  Makefile  README  README.autovirtualbox  README.docker  README.linux  README.md  README.ndiff  README.osx  README.virtualbox  README.virtualbox_20_04  README.win  Setup.Ubuntu18.04  Setup.Ubuntu20.04  autovirtualbox.sh  autovirtualbox_ubuntu20_04.sh  docker_build.sh  docker_run.sh  dockerit.sh  dockertest.sh  numdiff-5.9.0.tar.gz.sig
Gcov/: CMakeLists.txt  stream_triad.c
Listing1/: CMakeLists.txt  MPITimeIt.c  TimeIt.c  mympiapp.ctest
Listing2/: CMakeLists.txt  TimeIt.c  blur_long.ctest
Listing3/: Makefile  test.c
